# search-mcp

./: pdf_reader_server.py  pdf_to_csv_server.py  pdf_writer_server.py  pyproject.toml  server.py
