[project]
name = "mcp-craw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.1.45",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.0",
    "lxml>=6.1.0",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "readability-lxml>=0.8.4.1",
    "tldextract>=5.3.1",
]
